<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ContactDetailsActivity">

    <Button
        android:id="@+id/btn_back_to_contact"
        android:text="@string/details_voltar_para_os_contactos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/btn_back_to_contact">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_detalhes_do_contacto"
            android:textAppearance="?android:attr/textAppearanceLarge" />



        <ImageView
            android:id="@+id/iv_contact_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:src="@drawable/user_icon" />



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >


            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_nome"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/details_nome_do_contacto"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_telf_telm"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_contact_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/details_contacto"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_contact_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/details_email_do_contacto"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </TableRow>


        </TableLayout>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_codigo_postal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:padding="5dp" />

        <TextView
            android:id="@+id/tv_contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/details_codigo_postal_do_contacto"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
</RelativeLayout>